<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name" translatable="false">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About…</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">Weather Details</string>
    <string name="title_activity_about">About Sunshine</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">New York</string>
    <string name="pref_location_hint">City name or zip code (e.g "New York")</string>
    <string name="pref_units_default" translatable="false">metric</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="websiteUrl" translatable="false">http://www.cryptocodes.com</string>
    <string name="view_location">View Location</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification" translatable="false">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_enable_gps_location" translatable="false">true</string>
    <string name="pref_enable_gps_default" translatable="false">true</string>
    <string name="pref_enable_gps_true">Automatic location on</string>
    <string name="pref_enable_gps_false">Automatic location off</string>
    <string name="pref_enable_gps_header">Automatic Location</string>

    <!-- Strings for formatting weather-related data -->

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Share format [CHAR LIMIT=NONE]-->
    <string name="format_share">
        Weather for <xliff:g id="date">%1$s</xliff:g> in <xliff:g id="location">%2$s</xliff:g>:
        A high of <xliff:g id="high">%3$s</xliff:g> and low of
        <xliff:g id="low">%4$s</xliff:g></string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">sunshine.cryptocodes.com</string>
    <string name="content_authority" translatable="false">"com.cryptocodes.sunshine"</string>
    <string name="about_message" translatable="false">Made with love by the folks at Cryptocodes, Inc.</string>
    <string name="about_version" translatable="false">Version 1.0.4</string>
    <string name="about_date" translatable="false">October 8th, 2014</string>
    <string name="about_weather_provider" translatable="false">Weather information provided by OpenWeatherMap</string>
    <string name="Location_Not_Available">Current location not available</string>

</resources>
